# artifact_Sagitta

./: .gitignore  .gitmodules  README.txt  install.Docker.sh  install.sh  use.txt
artifact/: build_libtiff.sh  docker-compose.yaml  pipeline.py  pyproject.toml
artifact/_unused/: run_airflow.sh
artifact/_unused/airflow/: .gitignore
artifact/airflow/dags/: build_libtiff.py
artifact/evaluation/: .gitignore  .pre-commit-config.yaml  common.scala  find_same_file.py  graph_analyzer.py  metrics_itrace.scala  requirements.txt  sample.html  server.py
artifact/evaluation/libpng-PNG001/: report.html  run.sc
artifact/evaluation/libpng-PNG003/: report.html  run.sc
artifact/polytracker/: Dockerfile  README.md
artifact/polytracker/polytracker/custom_abi/: CMakeLists.txt  dfsan_abilist.txt  harfbuzz  jbig  libcrypto  libdeflate  libdl  libjpeg  liblzma  libm  libonig  libpng  libpthread  libssl  libtiff  openjpeg  openssl  openssl_asm  polytracker_abilist.txt  sqlite3
artifact/taint_tracking/: .gitignore  .pre-commit-config.yaml  .scalafmt.conf  README.md  ci_test.sc  graph_analyzer.sc  graph_analyzer_gt.py  graph_analyzer_nx.py  polyanalyze.py  project.scala  requirements.txt  run.sc  taint_tracking.scala  test.cpp  test.gml  tokenize.sc
artifact/try-clang/: canary.h
artifact/work-desk/: Dockerfile.default  Dockerfile.llvm-13  Dockerfile.magma  Dockerfile.polytracker  Dockerfile.polytracker.slim  README.md  config.scala  exec.scala  setup.sc  shell.scala
claims/claim1/: claim.txt  run.sh
infrastructure/: resources  url
(+457 files in other folders)
